@@ -503,7 +503,7 @@
     Short answer: Pretty much everything <span class="emphasis"><em>works</em></span>
     except for some corner cases.  Support for localization
     in <code class="classname">locale</code> may be incomplete on non-GNU
-    platforms. Also dependant on the underlying platform is support
+    platforms. Also dependent on the underlying platform is support
     for <span class="type">wchar_t</span> and <span class="type">long
     long</span> specializations, and details of thread support.
     </p><p>    
